added missing explanation text

--- a/Recommendations_with_IBM.ipynb
+++ b/Recommendations_with_IBM.ipynb
@@ -2251,7 +2251,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Provide your response here.**"
+    "There are no missing values, we can use SVD without worrying about NaNs. As we are only talking about interactions which are represented in the data as 1 or 0 (interacted/didn't interact), NaNs are not present and that's why there's no need to use FunkSVD like in the lesson."
    ]
   },
   {
@@ -2633,7 +2633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -2642,7 +2642,7 @@
        "0"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2651,13 +2651,6 @@
     "from subprocess import call\n",
     "call(['python', '-m', 'nbconvert', 'Recommendations_with_IBM.ipynb'])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
